--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -31,7 +31,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Null Hypothesis (H0):\n",
+    "There is no significant difference in patient outcomes and mortality rates associated with sepsis between healthcare organizations that implement advanced machine learning-based predictive models for sepsis detection and those that do not.\n",
+    "Alternative Hypothesis (H1):\n",
+    "Implementing advanced machine learning-based predictive models for sepsis detection significantly improves patient outcomes and reduces mortality rates compared to healthcare organizations that do not utilize such models."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +119,7 @@
     "from imblearn.pipeline import Pipeline as imbpipeline\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from joblib import dump\n",
     "\n",
     "# Database connection package\n",
     "import pyodbc\n",
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +230,7 @@
        "2  ICU200012    8  183  64   0   0  23.3  0.672   32          1  Positive"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +329,7 @@
        "2  ICU200611    6   96   0   0    0  23.7  0.190   28          1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +419,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +588,7 @@
        "max      2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +608,7 @@
        "(599, 11)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +777,7 @@
        "max      1.698000   70.000000    1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1043,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1070,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1092,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,10 +1244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## encode y labels\n",
     "encoder = LabelEncoder()\n",
     "y_train_encoded = encoder.fit_transform(y_train)\n",
     "y_train_encoded = encoder.fit_transform(y_test)"
@@ -1249,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1265,7 @@
        "Index(['PRG', 'PL', 'PR', 'SK', 'TS', 'M11', 'BD2', 'Age', 'Insurance'], dtype='object')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1308,8 +1315,8 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression Model Accuracy: 0.7666666666666667\n",
-      "Random Forest Model Accuracy: 0.7266666666666667\n",
-      "Gradient Boosting Model Accuracy: 0.7\n"
+      "Random Forest Model Accuracy: 0.7066666666666667\n",
+      "Gradient Boosting Model Accuracy: 0.6933333333333334\n"
      ]
     }
    ],
@@ -1351,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1360,8 +1367,8 @@
      "text": [
       "                 Model  Precision    Recall  F1-score  Support\n",
       "0  Logistic Regression   0.760961  0.766667  0.757257    150.0\n",
-      "1        Random Forest   0.716310  0.726667  0.713349    150.0\n",
-      "2    Gradient Boosting   0.686008  0.700000  0.685383    150.0\n"
+      "1        Random Forest   0.693255  0.706667  0.691069    150.0\n",
+      "2    Gradient Boosting   0.679035  0.693333  0.679704    150.0\n"
      ]
     }
    ],
@@ -1397,6 +1404,36 @@
     "\n",
     "# Display the DataFrame as a table\n",
     "print(metrics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./models/encoder.joblib']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Create the directory if it doesn't exist\n",
+    "os.makedirs(r\"D:\\Azubi lp5\\Building-a-FastAPI-for-Sepsis-Prediction-\\models\", exist_ok=True)\n",
+    "\n",
+    "# Dump models\n",
+    "dump(logistic_regression_model, './models/logistic_regression_pipeline.joblib')\n",
+    "dump(random_forest_model, './models/random_forest_pipeline.joblib')\n",
+    "dump(gradient_boosting_model, './models/gradient_boosting_pipeline.joblib')\n",
+    "\n",
+    "# Dump LabelEncoder (assuming it's already fitted and named 'encoder')\n",
+    "dump(encoder, './models/encoder.joblib')"
    ]
   }
  ],
